--- a/App Entitlements/Give Me a Sniglet (iOS).entitlements
+++ b/App Entitlements/Give Me a Sniglet (iOS).entitlements
@@ -14,5 +14,9 @@
 	</array>
 	<key>com.apple.security.app-sandbox</key>
 	<true/>
+	<key>com.apple.security.assets.pictures.read-write</key>
+	<true/>
+	<key>com.apple.security.files.user-selected.read-write</key>
+	<true/>
 </dict>
 </plist>
