:truck: Move Sniglet Widget to Platforms
The Sniglet Widget group has been moved to Platforms to simplify
the Xcode project tree structure.

Signed-off-by: Marquis Kurt <software@marquiskurt.net>

--- a/Give Me a Sniglet.xcodeproj/xcshareddata/xcschemes/Watch App.xcscheme
+++ b/Give Me a Sniglet.xcodeproj/xcshareddata/xcschemes/Watch App.xcscheme
@@ -54,8 +54,10 @@
       debugDocumentVersioning = "YES"
       debugServiceExtension = "internal"
       allowLocationSimulation = "YES">
-      <BuildableProductRunnable
-         runnableDebuggingMode = "0">
+      <RemoteRunnable
+         runnableDebuggingMode = "2"
+         BundleIdentifier = "com.apple.Carousel"
+         RemotePath = "/Watch">
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "9590D51227A9798300F51F10"
@@ -63,7 +65,7 @@
             BlueprintName = "Watch"
             ReferencedContainer = "container:Give Me a Sniglet.xcodeproj">
          </BuildableReference>
-      </BuildableProductRunnable>
+      </RemoteRunnable>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
@@ -71,8 +73,10 @@
       savedToolIdentifier = ""
       useCustomWorkingDirectory = "NO"
       debugDocumentVersioning = "YES">
-      <BuildableProductRunnable
-         runnableDebuggingMode = "0">
+      <RemoteRunnable
+         runnableDebuggingMode = "2"
+         BundleIdentifier = "com.apple.Carousel"
+         RemotePath = "/Watch">
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "9590D51227A9798300F51F10"
@@ -80,7 +84,16 @@
             BlueprintName = "Watch"
             ReferencedContainer = "container:Give Me a Sniglet.xcodeproj">
          </BuildableReference>
-      </BuildableProductRunnable>
+      </RemoteRunnable>
+      <MacroExpansion>
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "9590D51227A9798300F51F10"
+            BuildableName = "Watch.app"
+            BlueprintName = "Watch"
+            ReferencedContainer = "container:Give Me a Sniglet.xcodeproj">
+         </BuildableReference>
+      </MacroExpansion>
    </ProfileAction>
    <AnalyzeAction
       buildConfiguration = "Debug">
